# ryzenadj-controller

./: README.md  pyproject.toml
example/: example_client.py
ryzenadj_controller/: __main__.py  example_client.py  ryzenadj_controller.py  support.py
systemd/: ryzenadj-controller.service
usr/lib/systemd/system/: ryzenadj-controller.service
usr/share/ryzenadj-controller/scripts/: example-client.py  ryzenadj-controller.py  test-client.py
